# QuickChem

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTES.wiki  QuickChem_GridComp.rc  QuickChem_GridCompMod.F90  QuickChem_StateSpecs.rc  README.md
.github/: CODEOWNERS
OH_GridComp/: CMakeLists.txt  OH_GridCompMod.F90  OH_GridComp_ExtData.rc  OH_StateSpecs.rc  OH_instance_OH.rc
QC_Environment/: CMakeLists.txt  NOTE  QC_EnvironmentMod.F90
Shared/: CMakeLists.txt  QuickChem_Generic.F90  xgb_fortran_api.F90
